--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -1,1 +1,1 @@
-<a href="/C:/Users/andre/Downloads/galery/index.html"" target="_blank"><button>galery</button></a>
+<a href="index.html"><button>contactar</button></a>
