Actualizar contacto.html

--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -1,1 +1,30 @@
-<a href="index.html"><button>contactar</button></a>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contacto</title>
+</head>
+<body>
+
+<h1>Información de contacto</h1>
+
+<form action="#" method="post">
+  <label for="nombre">Nombre:</label>
+  <input type="text" id="nombre" name="nombre" value="Andres Moreno" readonly>
+
+  <label for="telefono">Teléfono:</label>
+  <input type="tel" id="telefono" name="telefono" value="+57 3009417211" readonly>
+
+  <label for="email">Correo electrónico:</label>
+  <input type="email" id="email" name="email" value="Am8314687@gmail.com" readonly>
+
+  <label for="twitter">Twitter:</label>
+  <input type="text" id="twitter" name="twitter" value="@andresmorenoyt" readonly>
+
+  <input type="submit" value="Enviar">
+</form>
+
+</body>
+</html>
+
