Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -4,52 +4,55 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Galería</title>
-  <link rel="stylesheet" href="styles/estilos.css">
+  <title>galeria</title>
 </head>
 <body>
+  <link rel="stylesheet" href="styles/stilos.css">
   <div>
-    <h1>Galería</h1>
-    <section class="container">
-      <img src="img/tio.jpg" alt="Tío">
-      <img src="img/abue_ceci.jpg" alt="Abuela Ceci" width="300px" height="400px">
-      <img src="img/abue_yolanda.jpg" alt="Abuela Yolanda" width="300px" height="400px">
-      <img src="img/andres.jpg" alt=""
+    <h1>galeria</h1>
+  <section class="conteiner">
+    <img src="img/tio.jpg" alt="">
+    <img src="img/abue ceci.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/dilan.jpg" alt=""
+    <img src="img/abue yolanda.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/geral.jpg" alt=""
+    <img src="img/andres.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/heidy.jpg" alt=""
+    <img src="img/dilan.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/kata.jpg" alt=""
+    <img src="img/geral.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/l.jpg" alt=""
+    <img src="img/heidy.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/madre.jpg" alt=""
+    <img src="img/kata.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/mafe.jpg" alt=""
+    <img src="img/l.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/mati.jpg" alt=""
+    <img src="img/madre.jpg" alt=""
     width="300px"
     height="400px">
-      <img src="img/padre.jpg" alt=""
+    <img src="img/mafe.jpg" alt=""
     width="300px"
     height="400px">
-      <!-- Agregar alt y dimensiones a las demás imágenes -->
-    </section>
+    <img src="img/mati.jpg" alt=""
+    width="300px"
+    height="400px">
+    <img src="img/padre.jpg" alt=""
+    width="300px"
+    height="400px">
+</section>
 
-    <h2>¿De qué trata esta galería?</h2>
-    <a href="contacto/contacto.html" target="_blank"><button>Contactar</button></a>
-  </div>
-  <span class="loader"></span>
+<h2>de que va esta galeriaaaaaaaa!!!!</h2>
+<a href="contacto/contacto.html" target="_blank"><button>contactar</button></a>
+</div>
+<span class="loader"></span>
 </body>
 </html>
